--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 markdown: rdiscount
 highlighter: pygments
 permalink: /:year/:month/:day/:title.html
-name: "rusty shutter"
+name: "Run with you."
 markdown: rdiscount
 
-author: "wayne"
+author: "sheng"
 atom-baseurl: "http://lhzhang.com"
 disqus: "gopherwood"
 
