--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: "Run with you."
 markdown: rdiscount
 
 author: "sheng"
-atom-baseurl: "http://lhzhang.com"
+atom-baseurl: "https://websay.me"
 disqus: "gopherwood"
 
 navigations:
