--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,8 @@ permalink: /:year/:month/:day/:title.html
 name: "Run with you ."
 markdown: rdiscount
 
-author: "sheng"
-atom-baseurl: "http://lhzhang.com"
-disqus: "gopherwood"
+author: "Sheng"
+atom-baseurl: "https://websay.me"
 
 navigations:
   - title: Archive
@@ -18,9 +17,3 @@ navigations:
   - title: About
     class: fa fa-user
     href: /about.html
-  - title: Gallery
-    class: fa fa-film
-    href: http://foto.lhzhang.com
-  - title: Subscribe
-    class: fa fa-rss
-    href: /atom.xml
