--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: rdiscount
 highlighter: pygments
 permalink: /:year/:month/:day/:title.html
-name: "Run with you ."
+name: "run with you"
 markdown: rdiscount
 
 author: "sheng"
