--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: "run with you"
 markdown: rdiscount
 
 author: "sheng"
-atom-baseurl: "https://websay.me"
+atom-baseurl: "http://websay.me"
 
 navigations:
   - title: Archive
