--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-markdown: rdiscount
+markdown: kramdown
 highlighter: pygments
 permalink: /:year/:month/:day/:title.html
 name: "run with you"
-markdown: rdiscount
+
+kramdown:
+  input: GFM
 
 author: "sheng"
 atom-baseurl: "http://websay.me"
