--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: kramdown
 highlighter: pygments
 permalink: /:year/:month/:day/:title.html
-name: "run with you"
+name: "医生生病了"
 
 kramdown:
   input: GFM
