--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-markdown: kramdown
+markdown: rdiscount
 highlighter: pygments
 permalink: /:year/:month/:day/:title.html
 name: "医生生病了"
-
-kramdown:
-  input: GFM
+markdown: rdiscount
 
 author: "sheng"
 atom-baseurl: "http://websay.me"
