--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,6 @@ navigations:
   - title: About
     class: fa fa-user
     href: /about.html
+  - title: Test
+    class: fa fa-user
+    href: /test.html
