--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,8 @@
 markdown: rdiscount
 highlighter: pygments
 permalink: /:year/:month/:day/:title.html
-name: "医生生病了"
+name: "张荣荣"
 markdown: rdiscount
 
-author: "sheng"
-atom-baseurl: "http://websay.me"
-
-navigations:
-  - title: Archive
-    class: fa fa-list-ul
-    href: /archive.html
-  - title: Tags
-    class: fa fa-tags
-    href: /tags.html
-  - title: About
-    class: fa fa-user
-    href: /about.html
+author: "zronger"
+atom-baseurl: "http://zrong.cc"
